<resources>

    <string name="app_name">Presidenciales</string>

    <string name="facebook_app_id">610961275903455</string>
    <string name="fb_login_protocol_scheme">fb610961275903455</string>


    <string name="TextEmail">Email</string>
    <string name="TextPass">Contraseña</string>
    <string name="btnLogin">Iniciar sesion</string>
    <string name="btnNewAccount">Crear cuenta</string>
    <string name="btnLoginGoogle">Google</string>
    <string name="btnLoginFacebook">Facebook</string>
    <string name="credencialesEmailIncorrectas">Email o contraseña incorrectos</string>
    <string name="ErrorSignInGoogle">Error al iniciar con Google</string>
    <string name="IniciasteComo">Iniciastes como:</string>
    <string name="error">Ha ocurrido un error</string>
    <string name="IntoEmailAndPasswordForNewAccount">Introduce Email y Contraseña</string>
    <string name="ErrorAuthWithGoogle">No se pudo autenticar con Google</string>
    <string name="not_close_session">No se pudo cerrar la sesion</string>
    <string name="not_revoke">No se revocó la sesion</string>
    <string name="CloseFullSession">Cerraste la sesion</string>
    <string name="CancelLoginFacebook">Has cancelado el inicio de sesion con Facebook</string>
    <string name="ErrorLoginFacebook">Ha ocurrido un error</string>
    <string name="facebookErrorLogin">Error en inicio de sesion con Facebook</string>
    <string name="textVerifyEmailUser">!!Genial!! Ahora verifica tu Email y luego da clic aquí abajo</string>
    <string name="Continue">Continuar</string>
    <string name="emailNoVerificado">Primero verifica tu Email</string>
    <string name="IntoCredentials">Ingresa tus credenciales</string>
    <string name="EmailNotVerified">Aún no has verificado tu Email</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="UserName">Nombre de user</string>
    <string name="FaltanDatos">Faltan algunos datos</string>
    <string name="department_list_hint">Departamento</string>
    <string name="etiquetaLoginVista">@string/app_name</string>
    <string name="RecuperarPassword">Recuperar contraseña</string>
    <string name="tabtextCandidatos">Candidatos</string>
    <string name="tabtextOpiniones">Opiniones</string>
    <string name="tabtextResultados">Resultados</string>

    <string name="menu_view_chart">Ver gráficos</string>
    <string name="menu_post_comments">Enviar comentarios</string>
    <string name="account_options">Opciones de cuenta</string>
    <string name="menu_sign_off">Cerrar sesión</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="share_app">Compartir</string>
    <string name="TextEmailConfirm">Confirma tu email</string>
    <string name="confirmarPass">Confirma tu contraseña</string>
    <string name="nombreUsuarioVacio">Escribe un nombre de user</string>
    <string name="emailNoCoincide">El email no coincide</string>
    <string name="passNoCoincide">La contraseña no coincide</string>
    <string name="eligeTuDepartamento">Escoge tu departamento</string>
    <string name="PasswordVacio">Contraseña vacía</string>
    <string name="emailUsuarioVacio">Escribe tu email</string>
    <string name="CompletaTusDatos">Completa tus datos</string>
    <string name="emailInvalido">Ingresa un email válido</string>
    <string name="DispositivoYaUtilizado">Este dispositivo ya ha sido utilizado para crear una cuenta, el user ha sido eliminado</string>
    <string name="Usuario_nulo">El user es nulo</string>
    <string name="DispositivoYautilizadoPorOtraCuenta">Este dispositivo ya ha sido utilizado para crear otra cuenta</string>
    <string name="RestablecerPass">Restablece tu contraseña</string>
    <string name="btnResetPassword">Enviar correo de recuperación</string>
    <string name="TextResetPassword">Escribe a continuación el email asociado a tu cuenta para que puedas recuperar tu contraseña</string>
    <string name="EmailResetSend">Abre el email para resetear tu contraseña</string>
    <string name="EmailSinCuenta">Este email no tiene una cuenta asociada</string>
    <string name="IngresarEmail">Ingresa tu email</string>
    <string name="emailConCuentaAsociada">Este email ya tiene cuenta asociada</string>
    <string name="RESET_PASS">RESET PASS</string>
    <string name="confirmaEmailUsuario">Confirma tu email</string>
    <string name="passVacio">Escribe tu contraseña</string>
    <string name="pass2Vacio">Confirma tu contraseña</string>
    <string name="password_length_is_invalid">Debe de contener entre 8 y 30 caracteres</string>
    <string name="null_Connection_Exception">Error al conectarse con el servidor.
                                   \n Toca para intentarlo de nuevo.</string>
    <string name="applyNewVoteIsSuccesful">Has votado correctamente</string>
    <string name="existingVote">Ya has votado anteriormente</string>
    <string name="selectDepartment">Primero selecciona el departamento en donde vives</string>
    <string name="interface_no_implement">La actividad no ha implementado la interfaz correspondiente</string>
    <string name="ok">Ok</string>
    <string name="share">Compartir</string>


    <string name="share_candidate_part1">Yo creo que </string>
    <string name="share_candidate_part2"> será el mejor presidente en la historia de El Salvador,
                                             \n y tú por cual votarás? </string>
    <string name="report_error">Reportar un problema</string>
    <string name="update_pass">Cambiar contraseña</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_home_view">Inicio</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="update_password">Actualizar contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="repeat_new_password">Confirmar nueva contraseña</string>
    <string name="delete_account_text">Al eliminar tu cuenta todos tus datos serán eliminados del sistema,
        incluyendo tu email, tu votación, nombre de usuario e imagen de perfil. Sin embargo,
        todas las opiniones y comentarios realizados por ti no serán eliminados</string>
    <string name="delete_account_text_continue">Para continuar, por favor escribe a continuación las credenciales de la cuenta que deseas eliminar</string>
    <string name="suggestions_and_errors">Sugerencias y errores</string>
    <string name="suggestions_options_text">Primero selecciona que te gustaría hacer</string>
    <string name="suggestions_and_errors_hint">Tú mensaje</string>
    <string name="select_options_spinner">Selecciona una opción</string>
    <string name="suggestions_email_text">Escribe aquí el email con el que enviarás tus sugerencias</string>
    <string name="send_suggestions_and_errors">Componer mensaje</string>
    <string name="current_password_long_text">Escribe tu contraseña actual</string>
    <string name="current_password_not_match">Contraseña actual incorrecta</string>
    <string name="new_password_is_empty_text">Escribe tu nueva contraseña</string>
    <string name="repeat_new_password_please_text">Confirma tu nueva contraseña</string>
    <string name="new_password_not_match">La nueva contraseña no coincide</string>
    <string name="update_password_successful">La contraseña ha sido actualizada correctamente</string>
    <string name="cancel_dialog_text">Cancelar</string>
    <string name="current_password_is_null_dialog_text">Has iniciado sesión con Google. Para establecer una contraseña a tu cuenta preciona Ok</string>
    <string name="update_password_error">Error al actualizar tu contraseña</string>
    <string name="delete_user_error">Error al eliminar la cuenta</string>
    <string name="delete_user_successful">La cuenta ha sido eliminada correctamente</string>

    <string name="suggestions_error_informations">Informar de un error en la app</string>
    <string name="suggestions_new_function">Solicitar una nueva función en la app</string>
    <string name="suggestions_new">Sugerencia específica</string>
    <string name="no_email_client">No tienes ningun cliente de email instalado</string>
    <string name="url_download_app">https://www.urldeprueba.com</string>
    <string name="share_app_text">Ahora ya puedes votar por tu candidato presidencial favorito
        y exponer todas tus opiniones y conocer las de los demás. Descarga gratis la app en: </string>
    <string name="et_opinion_hint">Escribe aquí tu opinión</string>
    <string name="upload_opinion_image">Galería</string>
    <string name="upload_opinion_photo_camera">Cámara</string>
    <string name="btn_upload_opinion_text">Publicar opinión</string>
    <string name="new_opinion">Nueva Opinión</string>
    <string name="string_time_stamp">a las</string>
    <string name="new_opinion_publiched">Tu opinión ha sido publicada</string>
    <string name="opinion_published_progress_text">Publicando tu opinión</string>
    <string name="delete_selected_image_title">Eliminar imagen</string>
    <string name="delete_selected_image_message">Deseas eliminar la imagen seleccionada?</string>
    <string name="opinion_cancel_title">Cancelar opinión</string>
    <string name="opinion_cancel_message">Deseas cancelar la creación de tu opinión?</string>
    <string name="opinion_error_remove">Lo siento, no tienes permisos para eliminar esta opinión</string>
    <string name="error_server">Error del servidor, intentalo nuevamente</string>
    <string name="opinion_read_error_message">Lo siento, no puedes leer las opiniones</string>
    <string name="edit_opinion">Editar</string>
    <string name="remove_opinion">Eliminar</string>
    <string name="opinion_dialog_remove_title">Eliminar opinión</string>
    <string name="opinion_dialog_remove_message">Esta acción eliminará de forma permanente esta opinión</string>
    <string name="opinion_dialog_remove_ok">Eliminar</string>
    <string name="common_dialog_cancel">Cancelar</string>
    <string name="no_comments">Aun no hay comentarios aquí... Se tú el primero.</string>
    <string name="error_while_publish_comment">Error al publicar tu comentario</string>
    <string name="error_while_get_new_comments">Error al cargar nuevos comentarios</string>
    <string name="error_while_remove_listener_comments">Error al eliminar la subscripción a los comentarios</string>
    <string name="comments_title">Comentarios</string>
    <string name="success_delete_comment">Comentario eliminado correctamente</string>
    <string name="error_while_delete_comment">No puedes borrar este comentario</string>
    <string name="error_red">Error de red</string>
    <string name="error_while_like">Error al dar like, intentalo de nuevo</string>
    <string name="delete_opinion">Opinion borrada con éxito</string>
    <string name="error_while_delete_opinion">Error al eliminar la opinión</string>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>


</resources>
