<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.papaprogramador.presidenciales.View.Fragments.DeleteAccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="italic" />

    <TextView
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_text_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="normal|bold" />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/delete_email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TextEmail"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/delete_pass_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TextPass"
            android:inputType="textPassword"
            android:paddingTop="@dimen/activity_vertical_margin" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/delete_account"
        style="@style/ThemeButtonsDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/delete_account" />

</LinearLayout>
