<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".Vistas.Actividades.ResetPasswordVista">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/MarginTopLogin">

        <LinearLayout
            android:id="@+id/resetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RecuperarPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextResetPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="italic" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputResetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/EmailReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/TextEmail"
                    android:inputType="textEmailAddress"
                    android:paddingTop="@dimen/activity_vertical_margin" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnResetpassword"
                style="@style/ThemeButtonsDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/btnResetPassword" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
