<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.Actividades.LoginActivity"
    android:id="@+id/contenido">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/UserName"
                        android:inputType="textPersonName"
                        android:paddingTop="@dimen/activity_vertical_margin" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexEmailCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextEmail"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/activity_vertical_margin" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_confirm_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexEmailConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextEmailConfirm"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/activity_vertical_margin" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPasswordCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextPass"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/icon_top_margin" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextPassConfirm"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/icon_top_margin" />

                </android.support.design.widget.TextInputLayout>


                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinnerDep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Departamento"
                    android:textColorHint="@color/accent"
                    app:met_floatingLabel="normal" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin">


                <Button
                    android:id="@+id/btnNewAccountCreate"
                    style="@style/ThemeButtonsDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnNewAccount" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/ProgressBarNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>



</ScrollView>
